fixed hyperlink font not loading on mobile devices

--- a/assets/css/common/fonts.css
+++ b/assets/css/common/fonts.css
@@ -150,7 +150,7 @@ h4 {
 }
 
 a {
-    font-family: Consolas;
+    font-family: 'Code New Roman NF', Consolas;
     font-weight: 400;
 }
 
